--- a/Projeto_DAE/pom.xml
+++ b/Projeto_DAE/pom.xml
@@ -65,6 +65,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.4.0</version>
+                <configuration>
+                    <outputDirectory>target</outputDirectory>
+                    <warName>Projeto_DAE</warName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
